
5.10  Wed Apr 20 18:00:00 2005
        - Updated dependencies to require latest module::pluggable::fast
        - New installer for templates and stuff using Module::Build
        - scripts are now prefixed, for being installable
        IMPORTANT: You have to regenerate the script directory,
        remove Makefile.PL and add Build.PL

5.03  Tue Apr 19 20:35:00 2005 (Revision 462)
        - Fixed Test example (Torsten Seeman)
        - Added Plugins chapter to manual
        - applied doc patch from Robert Boone <robert@rlb3.com>
        - Improved Dispatcher error messages.
        - Refactored so we don't need to include helper from
          Catalyst.pm - Fixes issues with FindBin
        - applied HTTP.pm patch from Andy Grundman <andy@hybridized.org>
        - added plugin() method for instant plugins
        - FCGI is no more considered experimental

5.02  Mon Apr 18 10:00:00 2005
        - fixed manifest

5.01  Sun Apr 17 23:00:00 2005
        - some documentation bugs fixed
        - added Catalyst::Utils
        - fixed regexp bug (Matt S Trout)
        - fixed upload bug with MP19
        - added $c->req->body
        - aliased $c->res->output to $c->res->body
        - Read AUTHOR from passwd or $ENV{AUTHOR} when 
          generating code.
        - extended attribute handling
        - added global config for components

5.00  Fri Apr 15 18:00:00 2005
        - new core to support inheritance trees
        - new syntax for action declaration
        - new helper system using TT2
        - problems with mod_perl2 fixed
        - added Test::Pod support
        - added new server backend with HTTP/1.1 support
        - added option to run tests against a remote server
        - renamed errors() to error()
        - more better docs
        - countless minor improvements
          IMPORTANT: This release is very incompatible to previous ones
          and you have to regenerate the helper scripts again...

4.34  Wed Mar 23 07:00:00 2005