@@ -1,3 +1,4 @@
+Build.PL
 Changes
 lib/Catalyst.pm
 lib/Catalyst/Base.pm
@@ -28,6 +29,7 @@ lib/Catalyst/Request/Upload.pm
 lib/Catalyst/Response.pm
 lib/Catalyst/Test.pm
 lib/Catalyst/Utils.pm
+Makefile.PL
 MANIFEST			This list of files
 META.yml
 README
@@ -81,4 +83,3 @@ t/lib/TestApp/View/Dump/Request.pm
 t/lib/TestApp/View/Dump/Response.pm
 t/plugin/loaded.t
 t/TODO
-Build.PL
